<resources>

    <!-- General -->
    <string name="app_name">Safe on Feet</string>
    <string name="app_description">Enfin une application sociale qui permet de ne plus rentrer seul !</string>
    <string name="title_activity_maps">Map</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="connexion">Connexion</string>
    <string name="str_button_search">Rechercher</string>

    <!-- Buttons -->
    <string name="str_button_subscribe">Inscription</string>
    <string name="str_button_login">Connexion</string>
    <string name="str_button_next">Suivant</string>
    <string name="str_button_male">Un homme</string>
    <string name="str_button_female">Une femme</string>
    <string name="str_button_sendemail">Renvoyez-moi un email</string>

    <!-- Subscription texts -->
    <string name="subscription1_text1">Oh salut, on ne se connaît pas !</string>
    <string name="subscription1_text2">Comment tu t’appelles ?</string>
    <string name="subscription2_text1">Tu es</string>
    <string name="subscription2_text2">ou</string>
    <string name="subscription3_text1">Quel âge as-tu ?</string>
    <string name="subscription4_text1">Quelle est ton adresse mail ?</string>
    <string name="subscription4_text2">J’aimerais recevoir des informations promotionnelles, notamment des enquêtes, des messages sympas et beaucoup d’amour de la part de Safe on feet, via email.</string>
    <string name="subscription5_text1">Crée ton mot de passe</string>
    <string name="subscription5_text2">Votre mot de passe doit comporter 8 caractères ou plus. Essayez de le rallonger ou d’ajouter des symboles, tels que !, #, ou %.</string>
    <string name="subscription6_text1">Ajoute ta photo de profil</string>
    <string name="subscribe7_text1">Ajoute ta description</string>
    <string name="subscription8_text1">Plus qu\'une étape !</string>
    <string name="subscription8_text2">Ajoute ta carte d\'identité</string>
    <string name="subscription9_text1">FÉLICITATIONS !</string>
    <string name="subscription9_text2">Notre équipe va vérifier votre identité dans les 24 heures.  Veuillez confirmer votre adresse en ouvrant le lien envoyé par mail.</string>


    <!-- Journey texts -->
    <string name="str_journey_start">Point de départ</string>
    <string name="str_journey_end">Point d\'arrivée</string>
    <string name="journey_option_1">Train</string>
    <string name="journey_option_2">Bus</string>
    <string name="journey_option_3">Métro</string>
    <string name="journey_option_4">Tram</string>
    <string name="str_journey_start_short">Départ: </string>
    <string name="str_journey_end_short">Arrivée: </string>
    <string name="str_journey_results">Trajets disponibles</string>

    <!-- Messaging texts-->
    <string name="message_list">Messagerie</string>

    <!-- input hints -->
    <string name="first_name_hint">PRENOM</string>
    <string name="last_name_hint">NOM</string>
    <string name="age_hint">AGE</string>
    <string name="email_hint">EMAIL</string>
    <string name="password_hint">MOT DE PASSE</string>
    <string name="bio_hint">Quelques mots pour te décrire...</string>

    <!-- Img descriptions -->
    <string name="contentdescription_profilepicture">Photo de profil</string>
    <string name="contentdescription_cbpicture">Carte d\'identité</string>
    <string name="contentdescription_backgroundpicture">background</string>
    <string name="contentdescription_checkpicture" />
    <string name="str_bottombar_messages">messages</string>
    <string name="str_bottombar_profile">profile</string>

    <!-- Errors -->
    <string name="error_emptyInput">Veuillez remplir tous les champs.</string>
    <string name="error_invalidAge">Vous devez avoir 16 ans minimum pour vous inscrire.</string>
    <string name="error_invalidEmail">Veuillez entrer une adresse e-mail valide.</string>
    <string name="error_shortPassword">Votre mot de passe doit faire minimum 8 caractères.</string>
    <string name="str_login_false">Es-tu sur de tes identifiants ?</string>
    <string name="str_login_failed">Désolé ! Nous rencontrons un problème :(</string>
    <string name="str_button_modify">Modifier</string>
    <string name="str_journey_nominatim_error">Nous n\'arrivons pas à localiser vos adresses :(</string>
    <string name="str_journey_empty_search_error">Il semble que vous n\'ayez pas rempli tous les champs</string>
    <string name="str_journey_navitia_error">Oops ! Nous avons rencontré un problème</string>
    <string name="str_journey_navitia_nojourney_error">Désolé, nous n\'avons pas trouvé de trajet :(</string>
    <string name="journey_section1">section1</string>
    <string name="journey_section2">section2</string>
    <string name="journey_section3">section3</string>
    <string name="journey_section4">section4</string>
    <string name="journey_section5">section5</string>
    <string name="str_journey_summary">Récapitulatif de votre trajet</string>
    <string name="str_journey_companion">Trouver un compagnon</string>

</resources>
